Fixed text alignment for projects title

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -482,6 +482,7 @@ h2 {
     h2 {
       margin-top: 1.3em;
       margin-bottom: 1em;
+      text-align: center;
     }
   }
   #projects-list {
